--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,18 @@
 </script>
 
 <h1>Welcome to FBgular</h1>
+
 <div ng-view></div>
 
 
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/ng-grid/ng-grid.debug.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
 
 <script src="js/services.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controllers/fbgular-ctrl.js"></script>
+<script src="js/controllers/analysis-ctrl.js"></script>
 </body>
 </html>
